additional/alb/alb_cfn.yaml
---
AWSTemplateFormatVersion: 2010-09-09

Description: Notejam ALB

Parameters:
  VpcStackName:
    Description: VPC Cloudformation stack name
    Type: String

  Env:
    Description: Environment name
    Type: String
    AllowedValues:
      - production
      - development
      - testing

  LoadBalancerIdleTimeout:
    Description: The idle timeout value, in seconds
    Type: Number
    Default: 60
    MinValue: 1
    MaxValue: 4000

  LoadBalancerDeregistrationDelay:
    Description: The amount time (in seconds) to wait before changing the state of a deregistering target from draining to unused
    Type: Number
    Default: 60
    ConstraintDescription: Must be in the range [0-3600]
    MinValue: 0
    MaxValue: 3600

  AccessLogsBucketName:
    Description: Access logs S3 bucket name
    Type: String

  LoadBalancerCertificateArn:
    Description: Optional Amazon Resource Name (ARN) of the certificate to associate with the load balancer
    Type: String
    Default: ''

Resources:
  AlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security Group for Elastic Load Balancer"
      VpcId:
        Fn::ImportValue: !Sub "${VpcStackName}-vpc"
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: '-1'
      SecurityGroupIngress:
        - IpProtocol: TCP
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "alb-${Env}-sg-${AWS::StackName}"
        - Key: Env
          Value: !Ref Env

  AlbToNodesSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security Group for EC2 instances"
      VpcId:
        Fn::ImportValue: !Sub "${VpcStackName}-vpc"
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: '-1'
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref AlbSecurityGroup
          IpProtocol: TCP
          FromPort: 5000
          ToPort: 5000
      Tags:
        - Key: Name
          Value: !Sub "ec2-${Env}-sg-${AWS::StackName}"
        - Key: Env
          Value: !Ref Env

  DefaultTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 15
      HealthCheckPath: '/signin/'
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      Matcher:
        HttpCode: '200-299'
      Port: 5000
      Protocol: HTTP
      VpcId:
        Fn::ImportValue: !Sub "${VpcStackName}-vpc"
      TargetGroupAttributes:
      - Key: deregistration_delay.timeout_seconds
        Value: !Ref LoadBalancerDeregistrationDelay

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: 'idle_timeout.timeout_seconds'
          Value: !Ref LoadBalancerIdleTimeout
        - Key: 'routing.http2.enabled'
          Value: 'true'
        - Key: 'access_logs.s3.enabled'
          Value: 'true'
        - Key: 'access_logs.s3.prefix'
          Value: !Ref 'AWS::StackName'
        - Key: 'access_logs.s3.bucket'
          Value: !Ref AccessLogsBucketName
      Scheme: internet-facing
      SecurityGroups:
        - !Ref AlbSecurityGroup
      Subnets:
        - Fn::ImportValue: !Sub "${VpcStackName}-public-subnet1"
        - Fn::ImportValue: !Sub "${VpcStackName}-public-subnet2"
        - Fn::ImportValue: !Sub "${VpcStackName}-public-subnet3"
      Tags:
        - Key: Name
          Value: !Sub "alb-${Env}-${AWS::StackName}"
        - Key: Env
          Value: !Ref Env

  HttpsListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      Certificates:
        - CertificateArn: !Ref LoadBalancerCertificateArn
      DefaultActions:
        - TargetGroupArn: !Ref DefaultTargetGroup
          Type: forward
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 443
      Protocol: HTTPS

Outputs:
  Alb:
    Description: The ID of Elastic Load Balancer.
    Value: !Ref ApplicationLoadBalancer

  AlbSecurityGroup:
    Description: The ID of ELB Security Group.
    Value: !Ref AlbSecurityGroup

  AlbToNodesSecurityGroup:
    Description: The ID of EC2 Security Group.
    Value: !Ref AlbToNodesSecurityGroup
